--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
         <item name="android:statusBarColor">@color/rummy_mainColor</item>
         <item name="android:windowBackground">#000000</item>
         <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:textColorPrimary">@color/text_color8</item>
+        <item name="android:textColorSecondary">@color/text_color2</item>
         <item name="cardViewStyle">@style/CardViewStyle</item>
     </style>
 
